--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   <section class="contact section" id="Contact">
       <div class="contact__content">
           <p class="address_title">LIÊN HỆ VỚI CHÚNG TÔI ĐỂ ĐẶT BÁNH TRUNG THU KIDO's BAKERY</p>
-          <p><a href="#">096 105 1014</a></p>
+          <p><a href="#">039.543.2497</a></p>
           <p class="address">   Nhà sản xuất: Công ty cổ phần dầu thực vật Tường An (thuộc tập đoàn KIDO) <br>
                                 Địa chỉ : </p>
 
@@ -232,7 +232,7 @@
               <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                   <h3>CONNECT WITH US</h3>
                   <ul>
-                      <li><a href="#"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+                      <li><a href="https://www.facebook.com/ngoc.manthixuan"><i class="fab fa-facebook-f"></i> Facebook</a></li>
                   </ul>
               </div>
           </div>
