--- a/index.html
+++ b/index.html
@@ -122,67 +122,132 @@
                   <br>
                   <br>
               </li>
+
+
               <div class="newIn__content">
                   <div class="row">
                       <div class="col-6 col-md-3">
                           <div class="newIn__img">
-                              <img class="img-fluid" src="./hinh anh/logo_kido.png" alt="">
+                              <img class="img-fluid" src="./hinh anh/cuahoangde.jpg" alt="">
                               <div class="newIn__overlay"></div>
                               <div class="newIn__play">
                                   <div>
-                                      <p class="date">GIÁ : 750.000</p>
+                                      <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
                                   </div>
 
                               </div>
                           </div>
                           <div class="newIn__title mb-3 mb-md-0">
-                              <h3>Bánh Trung Thu KIDO <br> Vị thập cẩm </h3>
+                              <h3>Vị Cua hoàng đế xốt Singapore <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 100.000</p></h3>
                           </div>
                       </div>
                       <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
                           <div class="newIn__img">
-                              <img class="img-fluid" src="./hinh anh/logo_kido.png" alt="">
+                              <img class="img-fluid" src="./hinh anh/tomalaska.jpg" alt="">
                               <div class="newIn__overlay"></div>
                               <div class="newIn__play">
                                 <div>
-                                    <p class="date">GIÁ : 750.000</p>
+                                    <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
                                 </div>
                               </div>
                           </div>
                           <div class="newIn__title mb-3 mb-md-0">
-                            <h3>Bánh Trung Thu KIDO <br> Vị thập cẩm </h3>
+                            <h3>Vị Tôm Alaska xốt tiêu đen <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 100.000</p></h3>
                           </div>
                       </div>
                       <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
                           <div class="newIn__img">
-                              <img class="img-fluid" src="./hinh anh/logo_kido.png" alt="">
+                              <img class="img-fluid" src="./hinh anh/gaquay.jpg" alt="">
                               <div class="newIn__overlay"></div>
                               <div class="newIn__play">
                                 <div>
-                                    <p class="date">GIÁ : 750.000</p>
+                                    <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
                                 </div>
                               </div>
                           </div>
                           <div class="newIn__title mb-3 mb-md-0">
-                            <h3>Bánh Trung Thu KIDO <br> Vị thập cẩm </h3>
+                            <h3>Vị Gà quay tứ xuyên <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 86.000</p></h3>
                           </div>
                       </div>
                       <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
                           <div class="newIn__img">
-                              <img class="img-fluid" src="./hinh anh/logo_kido.png" alt="">
+                              <img class="img-fluid" src="./hinh anh/jambon.jpg" alt="">
                               <div class="newIn__overlay"></div>
                               <div class="newIn__play">
                                 <div>
-                                    <p class="date">GIÁ : 750.000</p>
+                                    <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
                                 </div>
                               </div>
                           </div>
                           <div class="newIn__title mb-3 mb-md-0">
-                            <h3>Bánh Trung Thu KIDO <br> Vị thập cẩm </h3>
+                            <h3>Vị Jambon bát bửu <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 79.000</p></h3>
                           </div>
                       </div>
                   </div>
               </div>
+
+              <div class="newIn__content">
+                <div class="row">
+                    <div class="col-6 col-md-3">
+                        <div class="newIn__img">
+                            <img class="img-fluid" src="./hinh anh/cuahoangde.jpg" alt="">
+                            <div class="newIn__overlay"></div>
+                            <div class="newIn__play">
+                                <div>
+                                    <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="newIn__title mb-3 mb-md-0">
+                            <h3>Vị Cua hoàng đế xốt Singapore <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 100.000</p></h3>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+                        <div class="newIn__img">
+                            <img class="img-fluid" src="./hinh anh/tomalaska.jpg" alt="">
+                            <div class="newIn__overlay"></div>
+                            <div class="newIn__play">
+                              <div>
+                                  <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="newIn__title mb-3 mb-md-0">
+                          <h3>Vị Tôm Alaska xốt tiêu đen <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 100.000</p></h3>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+                        <div class="newIn__img">
+                            <img class="img-fluid" src="./hinh anh/gaquay.jpg" alt="">
+                            <div class="newIn__overlay"></div>
+                            <div class="newIn__play">
+                              <div>
+                                  <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="newIn__title mb-3 mb-md-0">
+                          <h3>Vị Gà quay tứ xuyên <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 86.000</p></h3>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+                        <div class="newIn__img">
+                            <img class="img-fluid" src="./hinh anh/jambon.jpg" alt="">
+                            <div class="newIn__overlay"></div>
+                            <div class="newIn__play">
+                              <div>
+                                  <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="newIn__title mb-3 mb-md-0">
+                          <h3>Vị Jambon bát bửu <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 79.000</p></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
               
           </ul>
       </div>
