update full san pham

--- a/index.html
+++ b/index.html
@@ -94,15 +94,6 @@
           </div>
       </nav>
   </header>
-  <!-- CAROUSEL -->
-  <section class="shoesCarousel" id="shoesCarousel">
-      <!-- data-ride="carousel" -->
-      <div id="carouselShoes" class="carousel slide carousel-fade">
-          <!-- <ol class="container carousel-indicators">
-              <li data-target="#carouselShoes" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselShoes" data-slide-to="1"></li>
-              <li data-target="#carouselShoes" data-slide-to="2"></li>
-          </ol> -->
           <div class="carousel-inner">
               <div class="carousel-item active">
                   <img src="./hinh anh/nền kido.jpg" class="d-block w-100" alt="...">
@@ -123,7 +114,7 @@
                   <br>
               </li>
 
-
+<!-- line 1 -->
               <div class="newIn__content">
                   <div class="row">
                       <div class="col-6 col-md-3">
@@ -138,59 +129,63 @@
                               </div>
                           </div>
                           <div class="newIn__title mb-3 mb-md-0">
-                              <h3>Vị Cua hoàng đế xốt Singapore <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 100.000</p></h3>
+                              <h3>Vị Cua hoàng đế xốt Singapore <br>(120g 0 trứng)-(150g 1 trứng) <br>
+                                <p class="price">Giá : 80.000-100.000 </p></h3>
                           </div>
                       </div>
                       <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
-                          <div class="newIn__img">
-                              <img class="img-fluid" src="./hinh anh/tomalaska.jpg" alt="">
-                              <div class="newIn__overlay"></div>
-                              <div class="newIn__play">
-                                <div>
-                                    <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
-                                </div>
+                        <div class="newIn__img">
+                            <img class="img-fluid" src="./hinh anh/dauxanhsaurieng.jpg" alt="">
+                            <div class="newIn__overlay"></div>
+                            <div class="newIn__play">
+                              <div>
+                                  <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
                               </div>
-                          </div>
-                          <div class="newIn__title mb-3 mb-md-0">
-                            <h3>Vị Tôm Alaska xốt tiêu đen <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 100.000</p></h3>
-                          </div>
-                      </div>
-                      <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
-                          <div class="newIn__img">
-                              <img class="img-fluid" src="./hinh anh/gaquay.jpg" alt="">
-                              <div class="newIn__overlay"></div>
-                              <div class="newIn__play">
-                                <div>
-                                    <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
-                                </div>
+                            </div>
+                        </div>
+                        <div class="newIn__title mb-3 mb-md-0">
+                          <h3>Vị Đậu xanh sầu riêng <br>(150g 1 trứng) <br>
+                            <p class="price">Giá : 75.000</p></h3>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+                        <div class="newIn__img">
+                            <img class="img-fluid" src="./hinh anh/hatsenmutdauvietquat.jpg" alt="">
+                            <div class="newIn__overlay"></div>
+                            <div class="newIn__play">
+                              <div>
+                                  <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
                               </div>
-                          </div>
-                          <div class="newIn__title mb-3 mb-md-0">
-                            <h3>Vị Gà quay tứ xuyên <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 86.000</p></h3>
-                          </div>
-                      </div>
-                      <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
-                          <div class="newIn__img">
-                              <img class="img-fluid" src="./hinh anh/jambon.jpg" alt="">
-                              <div class="newIn__overlay"></div>
-                              <div class="newIn__play">
-                                <div>
-                                    <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
-                                </div>
+                            </div>
+                        </div>
+                        <div class="newIn__title mb-3 mb-md-0">
+                          <h3>Vị Hạt sen mứt dâu việt quất <br>(120g 0 trứng)-(150g 1 trứng) <br>
+                            <p class="price">Giá : 56.000-70.000</p></h3>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+                        <div class="newIn__img">
+                            <img class="img-fluid" src="./hinh anh/duamuoimedailoan.jpg" alt="">
+                            <div class="newIn__overlay"></div>
+                            <div class="newIn__play">
+                              <div>
+                                  <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
                               </div>
-                          </div>
-                          <div class="newIn__title mb-3 mb-md-0">
-                            <h3>Vị Jambon bát bửu <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 79.000</p></h3>
-                          </div>
-                      </div>
+                            </div>
+                        </div>
+                        <div class="newIn__title mb-3 mb-md-0">
+                          <h3>Vị Dừa muối mè Đài Loan <br>(120g 0 trứng)-(150g 1 trứng) <br>
+                            <p class="price">Giá : 56.000-68.000</p></h3>
+                        </div>
+                    </div>
                   </div>
               </div>
-
-              <div class="newIn__content">
+<!-- line 2 -->
+            <div class="newIn__content">
                 <div class="row">
                     <div class="col-6 col-md-3">
                         <div class="newIn__img">
-                            <img class="img-fluid" src="./hinh anh/cuahoangde.jpg" alt="">
+                            <img class="img-fluid" src="./hinh anh/thapcam" alt="">
                             <div class="newIn__overlay"></div>
                             <div class="newIn__play">
                                 <div>
@@ -200,7 +195,8 @@
                             </div>
                         </div>
                         <div class="newIn__title mb-3 mb-md-0">
-                            <h3>Vị Cua hoàng đế xốt Singapore <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 100.000</p></h3>
+                            <h3>Vị Thập cẩm lạp xưởng ngũ hạt <br>(120g 0 trứng)-(150g 1 trứng) <br>
+                                <p class="price">Giá : 64.000-78.000</p></h3>
                         </div>
                     </div>
                     <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
@@ -214,7 +210,8 @@
                             </div>
                         </div>
                         <div class="newIn__title mb-3 mb-md-0">
-                          <h3>Vị Tôm Alaska xốt tiêu đen <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 100.000</p></h3>
+                          <h3>Vị Tôm Alaska xốt tiêu đen <br>(120g 0 trứng)-(150g 1 trứng) <br>
+                              <p class="price">Giá : 76.000-100.000</p></h3>
                         </div>
                     </div>
                     <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
@@ -228,7 +225,8 @@
                             </div>
                         </div>
                         <div class="newIn__title mb-3 mb-md-0">
-                          <h3>Vị Gà quay tứ xuyên <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 86.000</p></h3>
+                          <h3>Vị Gà quay tứ xuyên <br>(120g 0 trứng)-(150g 1 trứng) <br>
+                              <p class="price">Giá : 75.000-86.000</p></h3>
                         </div>
                     </div>
                     <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
@@ -242,17 +240,161 @@
                             </div>
                         </div>
                         <div class="newIn__title mb-3 mb-md-0">
-                          <h3>Vị Jambon bát bửu <br>đặc biệt 1 trứng (150g) <br><p class="price">Giá : 79.000</p></h3>
+                          <h3>Vị Jambon bát bửu <br>(120g 0 trứng)-(150g 1 trứng) <br>
+                              <p class="price">Giá : 65.000-79.000</p></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>   
+
+<!-- line 3 -->
+            <div class="newIn__content">
+                <div class="row">
+                    <div class="col-6 col-md-3">
+                        <div class="newIn__img">
+                            <img class="img-fluid" src="./hinh anh/hatsenhatdua.jpg" alt="">
+                            <div class="newIn__overlay"></div>
+                            <div class="newIn__play">
+                                <div>
+                                    <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="newIn__title mb-3 mb-md-0">
+                            <h3>Vị Hạt sen hạt dưa <br>(120g 0 trứng)-(150g 1 trứng) <br>
+                                <p class="price">Giá : 58.000-69.000</p></h3>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+                        <div class="newIn__img">
+                            <img class="img-fluid" src="./hinh anh/suaduahatdua" alt="">
+                            <div class="newIn__overlay"></div>
+                            <div class="newIn__play">
+                              <div>
+                                  <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="newIn__title mb-3 mb-md-0">
+                          <h3>Vị Sữa dừa hạt dưa <br>(120g 0 trứng)-(150g 1 trứng) <br>
+                              <p class="price">Giá : 54.000-65.000</p></h3>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+                        <div class="newIn__img">
+                            <img class="img-fluid" src="./hinh anh/khoaimon" alt="">
+                            <div class="newIn__overlay"></div>
+                            <div class="newIn__play">
+                              <div>
+                                  <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="newIn__title mb-3 mb-md-0">
+                          <h3>Vị Khoai môn <br>(120g 0 trứng)-(150g 1 trứng) <br>
+                              <p class="price">Giá : 54.000-65.000</p></h3>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+                        <div class="newIn__img">
+                            <img class="img-fluid" src="./hinh anh/dauxanhladua" alt="">
+                            <div class="newIn__overlay"></div>
+                            <div class="newIn__play">
+                              <div>
+                                  <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="newIn__title mb-3 mb-md-0">
+                          <h3>Vị Đậu xanh lá dứa <br>(150g 1 trứng) <br>
+                              <p class="price">Giá : 67.000</p></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>   
+
+<!-- line 4 -->
+            <div class="newIn__content">
+                <div class="row">
+                    <div class="col-6 col-md-3">
+                        <div class="newIn__img">
+                            <img class="img-fluid" src="./hinh anh/deodauxanh" alt="">
+                            <div class="newIn__overlay"></div>
+                            <div class="newIn__play">
+                                <div>
+                                    <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="newIn__title mb-3 mb-md-0">
+                            <h3>Vị Dẻo đậu xanh <br>(Bánh dẻo 150g 1 trứng) <br>
+                                <p class="price">Giá : 51.000</p></h3>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+                        <div class="newIn__img">
+                            <img class="img-fluid" src="./hinh anh/deohatsen" alt="">
+                            <div class="newIn__overlay"></div>
+                            <div class="newIn__play">
+                              <div>
+                                  <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="newIn__title mb-3 mb-md-0">
+                          <h3>Vị Dẻo hạt sen <br>(Bánh dẻo 150g 1 trứng) <br>
+                              <p class="price">Giá : 51.000</p></h3>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+                        <div class="newIn__img">
+                            <img class="img-fluid" src="./hinh anh/deodauxanhsaurieng.jpg" alt="">
+                            <div class="newIn__overlay"></div>
+                            <div class="newIn__play">
+                              <div>
+                                  <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="newIn__title mb-3 mb-md-0">
+                          <h3>Vị Dẻo đậu xanh sầu riêng <br>(Bánh dẻo 150g 1 trứng) <br>
+                              <p class="price">Giá : 51.000</p></h3>
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
+                        <div class="newIn__img">
+                            <img class="img-fluid" src="./hinh anh/sodiepXO.jpg" alt="">
+                            <div class="newIn__overlay"></div>
+                            <div class="newIn__play">
+                              <div>
+                                  <p class="date">Liên hệ với chúng tôi <br>và mua ngay</p>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="newIn__title mb-3 mb-md-0">
+                          <h3>Vị Sò điệp Nhật xốt X.O <br>(120g 0 trứng)-(150g 1 trứng) <br>
+                              <p class="price">Giá : 80.000-98.000</p></h3>
                         </div>
                     </div>
                 </div>
             </div>
-
-              
           </ul>
       </div>
-
   </section>
+
+   <!-- PLACE -->
+   <section class="place section" id="place">
+                <div class="container-md">
+                    <h2 class="title title--white"> Địa điểm bán</h2>
+                    <div class="row align-items-center">
+                        <div>
+                            <img class="img-fluid" src="./hinh anh/KIDO bakery.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+   </section>
   
   <!-- CONTACT -->
   <section class="contact section" id="Contact">
@@ -260,8 +402,9 @@
           <p class="address_title">LIÊN HỆ VỚI CHÚNG TÔI ĐỂ ĐẶT BÁNH TRUNG THU KIDO's BAKERY</p>
           <p><a href="#">039.543.2497</a></p>
           <p class="address">   Nhà sản xuất: Công ty cổ phần dầu thực vật Tường An (thuộc tập đoàn KIDO) <br>
-                                Địa chỉ : </p>
-
+                                Địa chỉ : <br>
+                                Điểm 1 : Ngã ba bùng binh thị xã Ninh Hòa (Cạnh quán cơm Thanh Vân) <br>
+                                Điểm 2 : Quán cơm Vy Vy (Đối diện Công Ty Diễm Loan - Bình Thành, Ninh Bình)   </p>
       </div>
   </section>
   <!-- FOOTER -->
@@ -302,7 +445,9 @@
               </div>
           </div>
           <div class="footer__copyright">
-              <p>Địa chỉ : </p>
+              <p>Địa chỉ :  Điểm 1 : Ngã ba bùng binh thị xã Ninh Hòa (Cạnh quán cơm Thanh Vân) <br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                            Điểm 2 : Quán cơm Vy Vy (Đối diện Công Ty Diễm Loan - Bình Thành, Ninh Bình) </p>
           </div>
       </div>
   </footer>
