--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
   </head>
   <body>
+    <div id="header"></div>
     <!-- HEADER -->
     <header class="container-md">
       <p class="text-right text-white mb-0">
@@ -54,15 +55,18 @@
 
           <div class="collapse navbar-collapse" id="shoesNavBar">
               <ul class="navbar-nav ml-auto">
-                  <li class="nav-item active line">
-                      <a class="nav-link" href="#shoesCarousel">TRANG CHỦ</a>
-                  </li>
-                  <li class="nav-item line">
+                    <li class="nav-item active line">
+                      <a class="nav-link" href="#header">TRANG CHỦ</a>
+                     </li>
+                    <li class="nav-item line">
                       <a class="nav-link" href="#all">TẤT CẢ</a>
-                  </li>
-                  <li class="nav-item line">
+                    </li>
+                    <li class="nav-item line">
+                    <a class="nav-link" href="#place">ĐIỂM BÁN</a>
+                    </li>
+                    <li class="nav-item line">
                       <a class="nav-link" href="#Contact">LIÊN HỆ</a>
-                  </li>
+                    </li>
               </ul>
           </div>
       </nav>
@@ -81,15 +85,18 @@
 
           <div class="collapse navbar-collapse" id="shoesNavBar">
               <ul class="navbar-nav ml-auto">
-                  <li class="nav-item active line">
-                      <a class="nav-link" href="#shoesCarousel">TRANG CHỦ</a>
-                  </li>
-                  <li class="nav-item line">
+                    <li class="nav-item active line">
+                      <a class="nav-link" href="#header">TRANG CHỦ</a>
+                    </li>
+                    <li class="nav-item line">
                       <a class="nav-link" href="#all">TẤT CẢ</a>
-                  </li>
-                  <li class="nav-item line">
+                    </li>
+                    <li class="nav-item line">
+                    <a class="nav-link" href="#place">ĐIỂM BÁN</a>
+                    </li>
+                    <li class="nav-item line">
                       <a class="nav-link" href="#Contact">LIÊN HỆ</a>
-                  </li>
+                    </li>
               </ul>
           </div>
       </nav>
@@ -387,10 +394,11 @@
    <!-- PLACE -->
    <section class="place section" id="place">
                 <div class="container-md">
-                    <h2 class="title title--white"> Địa điểm bán</h2>
+                    <h2 class="title title--white"> Điểm bán</h2>
                     <div class="row align-items-center">
-                        <div>
-                            <img class="img-fluid" src="./hinh anh/KIDO bakery.jpg" alt="">
+                        <div class="list_img">
+                            <img class="img_place first" src="./hinh anh/diemban1.jpg" alt="">
+                            <img class="img_place" src="./hinh anh/diemban2.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -402,7 +410,7 @@
           <p class="address_title">LIÊN HỆ VỚI CHÚNG TÔI ĐỂ ĐẶT BÁNH TRUNG THU KIDO's BAKERY</p>
           <p><a href="#">039.543.2497</a></p>
           <p class="address">   Nhà sản xuất: Công ty cổ phần dầu thực vật Tường An (thuộc tập đoàn KIDO) <br>
-                                Địa chỉ : <br>
+                                Các điểm bán : <br>
                                 Điểm 1 : Ngã ba bùng binh thị xã Ninh Hòa (Cạnh quán cơm Thanh Vân) <br>
                                 Điểm 2 : Quán cơm Vy Vy (Đối diện Công Ty Diễm Loan - Bình Thành, Ninh Bình)   </p>
       </div>
